assets/stylesheets/common.css
/*------------------------------------*\
    $SUMMARY
\*------------------------------------*/

/**
 * SUMMARY.................It's me !
 * SERVER FONTS............Font on server.
 * RESET...................Same render for all browser.
 * ACCESSIBILITY / SEO.....Hide and non-visible items.
 * ANIMATIONS..............Dynamically change display of markup.
 * MOBILE+ DESIGN..........Use for placement of item on mobiles and higher.
 *** Markup
 *** Component
 *** Layout
 */





/*------------------------------------*\
    $SERVER FONTS
\*------------------------------------*/






/*------------------------------------*\
    $RESET
\*------------------------------------*/





/*------------------------------------*\
    $ACCESSIBILITY / SEO
\*------------------------------------*/

.breadcrumb span,
.permalink,
.skip-link,
.errors {
	display: none;
}

.wrap-content:after {
	clear: both;
	content: "";
	display: block;
}



/*------------------------------------*\
    $ANIMATIONS
\*------------------------------------*/





/*------------------------------------*\
    $MOBILE+ STYLES
\*------------------------------------*/



/***********/
/* $Markup */
/***********/

html {
	font-size: 62.5%;
	margin: 0;
	padding: 0;
	background-color: #FFF;
}

a {
	color: #48739E;
	text-decoration: none;
}

a:visited {
	color: #335271;
}

a:visited:hover,
a:hover {
	color: #CC0000;
}

body {
	margin: 0;
	font-size: 14px;
	font-size: 1.4rem;
	line-height: 21px;
	font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #777;
	font-weight: 300;
}

h1 {
	font-size: 28px;
	font-size: 2.8rem;
}

h1, 
h2, 
h3 {
	line-height: 1.3;
}

h1, 
h2, 
h3, 
h4, 
h5, 
h6 {
	color: #222;
	margin: 32px 0 0;
	font-weight: normal;
}

h4, 
h5, 
h6 {
	margin: 24px 0 0;
}

p, 
ul, 
ol, 
table, 
pre, 
dl {
	margin: 16px 0 0;	
}

hr {
	border: 0;
	margin-top: 32px;
	border-top: 1px solid rgba(102, 128, 153, 0.1);
}


.header h1 {
	margin-top: 0;
}

.header .second {
	font-size: 16px;
	font-size: 1.6rem;
	display: block;
	text-align: center;
}

.header div a {
	text-decoration: none;
}

.breadcrumb ol {
	margin-top: 0;
	padding-left: 0;
	list-style-type: none;
}

.breadcrumb li {
	display: inline-block;
}

.breadcrumb a:before {
	content: "";
	display: inline-block;
	height: 7px;
	width: 7px;
	margin-left: 4px;
	margin-right: 4px;
	background-image: url('../media/images/horizontal-arrows.png');
	background-position: -7px 0;
}

.breadcrumb a:visited:before {
	background-position: -21px 0;
}

.breadcrumb a:hover:before,
.breadcrumb a:visited:hover:before {
	background-position: -14px 0;
}


/**************/
/* $Component */
/**************/

.field,
.submit {
	margin: 8px 0 0;	
}

.best-practice .content > :first-child,
.correct-practice .content > :first-child,
.worst-practice .content :first-child,
.content form:first-child > :first-child,
.content section:first-child > :first-child,
.content article:first-child > :first-child {
	margin-top: 0;
}

.articles .categories ul {
	margin-top: 24px;
}

.article .categories ul {
	margin-top: 8px;
}

.article .categories ul,
.articles .categories ul {
	padding-left: 4px;
}

.articles .categories h4 {
	display: none;
}

.article .categories li,
.articles .categories li {
	display: inline-block;
	margin-right: 8px;
	margin-top: 8px;
	padding: 2px 8px;
	border-radius: 4px;
	background-color: #EFF2F4;
	margin-left: -4px;
}

.published,
article .comments,
.articles .comments {
	display: inline-block;
	margin-top: 16px;
	margin-right: 16px;
	padding-left: 16px;
	position: relative;
}

article .comments a:before,
.articles .comments a:before,
.published a:before {
	content: "";
	display: inline-block;
	height: 16px;
	width: 16px;
	background-image: url('../media/images/ui-icon.png');
	position: absolute;
	left: 0;
	top: 3px;
}

.published a:before {
	background-position: -80px -112px;
}

.published a:hover:before {
	background-position: -80px -352px;
}

article .comments a:before,
.articles .comments a:before {
	background-position: -128px -96px;
}

article .comments a:hover:before,
.articles .comments a:hover:before {
	background-position: -128px -336px;
}

article .comments h4,
.articles .comments h4 {
	display: none;
}

.correct-practice, 
.best-practice, 
.worst-practice {
	margin: 0;
	margin-top: 12px;
	padding: 0;
	border-radius: 4px;
}

.correct-practice .title, 
.worst-practice .title, 
.best-practice .title {
	margin: 4px;
	padding: 2px 6px 2px 6px;
}

.correct-practice .content, 
.best-practice .content, 
.worst-practice .content {
	margin: 4px 4px 4px 4px;
	padding: 2px 6px 2px 6px;
}

.correct-practice .title + .content, 
.best-practice .title + .content, 
.worst-practice .title + .content {
	margin: 0 4px 4px 4px;
}

.best-practice {
	border: solid 1px #fff;
	background-color: #E4F8F2;
}

.best-practice .title {
	background-color: #C4E4D4;
}

.best-practice .content {
	background-color: #ecfaf6;
	border: dashed 1px #c4e4d4;
}

.worst-practice {
	border: solid 1px #fff;
	background-color: #F8ECE4;
}

.worst-practice .title {
	background-color: #EED0CA;
}

.worst-practice .content {
	background-color: #FDF4EC;
	border: dashed 1px #EED0CA;
}

.correct-practice {
	border: solid 1px #fff;
	background-color: #E4ECF8;
}

.correct-practice .title {
	background-color: #CAD0EE;
}

.correct-practice .content {
	background-color: #F4F8FD;
	border: dashed 1px #CAD0EE;
}

.pln { 
	color: #000;
}

.str { 
	color: #800080;
}

.kwd { 
	color: #008;
}

.com { 
	color: #008000;
	font-style: italic;
}

.typ { 
	color: #606;
}

.lit { 
	color: #066;
}

.pun,
.opn,
.clo { 
	color: #660; 
}
.tag {
	color: #008; 
}

.atn { 
	color: #606; 
}

.atv { 
	color: #080; 
 }

.dec, 
.var { 
	color: #606; 
 } 

.fun { 
	color: red; 
}

pre.prettyprint { 
	font-family: monospace;
	padding: 2px;
	border: 1px dashed #ccc;
	overflow-y: auto;
	background: #fff;
	cursor: e-resize;
	font-size: 1.0em;
}

ol.linenums { 
	margin-top: 0;
	margin-bottom: 0;
	padding-left: 35px;
}

li.L0,
li.L2,
li.L4,
li.L6,
li.L8 { 
	background: #fff;
	color: #ccc;
 }

li.L1,
li.L3,
li.L5,
li.L7,
li.L9 { 
	background: #fbfbfb; 	
	color: #ccc;
}

.disqus {
	margin-top: 16px;
}



/***********/
/* $Layout */
/***********/

